--- a/NetworkingTest/Packages/manifest.json
+++ b/NetworkingTest/Packages/manifest.json
@@ -1,5 +1,15 @@
 {
-  "dependencies": {
+  "scopedRegistries": [
+    {
+      "name": "Packages from jillejr",
+      "url": "https://npm.cloudsmith.io/jillejr/newtonsoft-json-for-unity/",
+      "scopes": [
+        "jillejr"
+      ]
+    }
+  ],
+  "dependencies": {  
+    "jillejr.newtonsoft.json-for-unity": "12.0.301",
     "com.unity.burst": "1.3.0-preview.10",
     "com.unity.collab-proxy": "1.2.16",
     "com.unity.ide.rider": "1.1.4",
