--- a/NetworkingTest/Packages/manifest.json
+++ b/NetworkingTest/Packages/manifest.json
@@ -1,23 +1,15 @@
 {
-  "scopedRegistries": [
-    {
-      "name": "Packages from jillejr",
-      "url": "https://npm.cloudsmith.io/jillejr/newtonsoft-json-for-unity/",
-      "scopes": [
-        "jillejr"
-      ]
-    }
-  ],
-  "dependencies": {  
-    "jillejr.newtonsoft.json-for-unity": "12.0.301",
-    "com.unity.burst": "1.3.0-preview.10",
-    "com.unity.collab-proxy": "1.2.16",
-    "com.unity.ide.rider": "1.1.4",
-    "com.unity.ide.vscode": "1.2.0",
+  "dependencies": {
+    "com.unity.burst": "1.3.1",
+    "com.unity.collab-proxy": "1.3.7",
+    "com.unity.ide.rider": "1.2.1",
+    "com.unity.ide.visualstudio": "2.0.1",
+    "com.unity.ide.vscode": "1.2.1",
     "com.unity.jobs": "0.2.9-preview.15",
+    "com.unity.nuget.newtonsoft-json": "2.0.0",
     "com.unity.test-framework": "1.1.14",
-    "com.unity.textmeshpro": "2.0.1",
-    "com.unity.timeline": "1.2.10",
+    "com.unity.textmeshpro": "3.0.0-preview.14",
+    "com.unity.timeline": "1.3.2",
     "com.unity.transport": "0.3.0-preview.6",
     "com.unity.ugui": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
